--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
 
 	<title>TheHighlandsBreak</title>
 </head>
@@ -60,78 +58,81 @@
 	<hr>
 
 	<!-- About -->
+	<main>
+		<section>
+			<div class="container text-center" id="about">
+				<p>Do you love beautiful landscapes and sunsets?</p>
 
-	<section>
-		<div class="container text-center" id="about">
-			<p>Do you love beautiful landscapes and sunsets?</p>
-
-			<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
-				find attractions, restaurants, bars and hotetls in Scotland.</p>
-		</div>
-	</section>
-	<!--./ End of About 
+				<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
+					find attractions, restaurants, bars and hotetls in Scotland.</p>
+			</div>
+		</section>
+		<!--./ End of About 
 -->
-	<!-- Bootstrap/carousel -->
-	<section>
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="assets/images/hut.jpeg" class="d-block w-100" alt="GlampingPod">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Glamping</h5>
-						<p>Glamping Pod By the Sea in Scotland.</p>
+		<!-- Bootstrap/carousel -->
+		<section>
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="assets/images/hut.jpeg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Glamping</h5>
+							<p>Glamping Pod By the Sea in Scotland.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
+							<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/hill.jpeg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Glencoe valley and mountains</h5>
+							<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>>
+						</div>
 					</div>
 				</div>
+				<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
-			<div class="carousel-item">
-				<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
-					<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
-				</div>
+		</section>
+		<!--./ End of Carousel -->
+		<hr>
+
+		<!-- Icons (notfinished) -->
+
+		<button i class='fas fa-bed'></i> </button>
+		<button i class="fas fa-hamburger"></i></button>
+		<button i class='fas fa-bicycle'></i></button>
+
+		<!--./ End of Icons -->
+
+		<!-- Google Map -->
+		<section>
+			<div class="container text-center" id="find">
+				<h2>Find it</h2>
 			</div>
-			<div class="carousel-item">
-				<img src="assets/images/hill.jpeg" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>Glencoe valley and mountains</h5>
-					<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>
-				</div>
-			</div>
-		</div>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-		</div>
-	</section>
-	<!--./ End of Carousel -->
-	<hr>
 
-	<!-- Icons (notfinished) -->
+			<!--The div element for the map -->
 
-	<button i class='fas fa-bed'></i> </button>
-	<button i class="fas fa-hamburger"></i></button>
-	<button i class='fas fa-bicycle'></i></button>
+			<div id="map"></div>
 
-	<!--./ End of Icons -->
-
-	<!-- Google Map -->
-	<section>
-		<div class="container text-center" id="find">
-			<h2>Find it</h2>
-		</div>
-
-		<!--The div element for the map -->
-
-		<div id="map"></div>
-
-		<script>
-			function initMap() {
+			<script>
+				function initMap() {
     var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 4,
         center: { lat: 55.953251, lng:  -3.188267 }
@@ -139,60 +140,67 @@
         }
 
     
-		</script>
+			</script>
 
 
-	</section>
-	<!--./ End of Map -->
+		</section>
+		<!--./ End of Map -->
 
-	<!--- Booking -->
+		<!--- Booking -->
 
-	<section class="container-fluid">
-		<div>
-			<h3 class="contact-heading text-center">Book Now!</h3>
-			<h5 class="uppercase text-center">Please fill in the below and we will help you find your next highland
-				break.</h5>
-		</div>
-		<div class="center-form">
-			<form>
-				<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-				<input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
-				<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-				<textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
-				<button type="submit" class="btn btn-secondary center-block">Send Messege</button>
-			</form>
-		</div>
-		</div>
-	</section>
+		<section class="container-fluid">
+			<div>
+				<h3 class="contact-heading text-center">Book Now!</h3>
+				<h5 class="uppercase text-center">Please fill in the below and we will help you find your next highland
+					break.</h5>
+			</div>
+			<div class="center-form">
+				<form>
+					<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+					<input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
+					<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+					<textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
+					<button type="submit" class="btn btn-secondary center-block">Send Messege</button>
+				</form>
+			</div>
+			</div>
+		</section>
+	</main>
 	<!--./ Booking End (will add email function once maps is done)-->
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
 		<div class="col-12 ml-auto text-center" id="social-links">
-                    <a href="https://en-gb.facebook.com" target="_blank">       <!--Facebook-->
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://www.instagram.com" target="_blank">        <!--Instagram-->
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://twitter.com" target="_blank">              <!--Twitter-->
-                        <i class="fab fa-twitter"></i>
-                    </a>
+			<a href="https://en-gb.facebook.com" target="_blank">
+				<!--Facebook-->
+				<i class="fab fa-facebook-f"></i>
+			</a>
+			<a href="https://www.instagram.com" target="_blank">
+				<!--Instagram-->
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="https://twitter.com" target="_blank">
+				<!--Twitter-->
+				<i class="fab fa-twitter"></i>
+			</a>
 		</div>
+
+		<!-- Linked to github -->
 		<div class="col-12 text-center small">
-			@2020 DTs Design
+			<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
 		</div>
 	</footer>
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-		</script>
-		<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
-		</script>
-		<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
-		</script>
+	<!-- Footer End -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+	</script>
+	<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
+	</script>
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
+	</script>
 
 </body>
 
